--- a/ports/Makefile
+++ b/ports/Makefile
@@ -26,6 +26,7 @@ standalone:
 	$(MAKE) -C eqinox/Standalone
 	$(MAKE) -C highlife/Standalone
 	$(MAKE) -C juce-demo-plugin/Standalone
+	$(MAKE) -C midiChords/Standalone
 	$(MAKE) -C midiLooper/Standalone
 	$(MAKE) -C tal-dub-3/Standalone
 	$(MAKE) -C tal-filter/Standalone
@@ -53,6 +54,7 @@ lv2:
 	$(MAKE) -C eqinox/LV2
 	$(MAKE) -C highlife/LV2
 	$(MAKE) -C juce-demo-plugin/LV2
+	$(MAKE) -C midiChords/LV2
 	$(MAKE) -C midiLooper/LV2
 	$(MAKE) -C tal-dub-3/LV2
 	$(MAKE) -C tal-filter/LV2
@@ -77,6 +79,7 @@ vst:
 	$(MAKE) -C eqinox/VST
 	$(MAKE) -C highlife/VST
 	$(MAKE) -C juce-demo-plugin/VST
+	$(MAKE) -C midiChords/VST
 	$(MAKE) -C midiLooper/VST
 	$(MAKE) -C tal-dub-3/VST
 	$(MAKE) -C tal-filter/VST
@@ -102,6 +105,7 @@ clean:
 	$(MAKE) clean -C eqinox/Standalone
 	$(MAKE) clean -C highlife/Standalone
 	$(MAKE) clean -C juce-demo-plugin/Standalone
+	$(MAKE) clean -C midiChords/Standalone
 	$(MAKE) clean -C midiLooper/Standalone
 	$(MAKE) clean -C tal-dub-3/Standalone
 	$(MAKE) clean -C tal-filter/Standalone
@@ -129,6 +133,7 @@ clean:
 	$(MAKE) clean -C eqinox/LV2
 	$(MAKE) clean -C highlife/LV2
 	$(MAKE) clean -C juce-demo-plugin/LV2
+	$(MAKE) clean -C midiChords/LV2
 	$(MAKE) clean -C midiLooper/LV2
 	$(MAKE) clean -C tal-dub-3/LV2
 	$(MAKE) clean -C tal-filter/LV2
@@ -153,6 +158,7 @@ clean:
 	$(MAKE) clean -C eqinox/VST
 	$(MAKE) clean -C highlife/VST
 	$(MAKE) clean -C juce-demo-plugin/VST
+	$(MAKE) clean -C midiChords/VST
 	$(MAKE) clean -C midiLooper/VST
 	$(MAKE) clean -C tal-dub-3/VST
 	$(MAKE) clean -C tal-filter/VST
