Update to latest juce; klangfalter param text+unit fix

--- a/libs/juce-2.0/source/extras/JuceDemo/Builds/CodeBlocks/Juce Demo.cbp
+++ b/libs/juce-2.0/source/extras/JuceDemo/Builds/CodeBlocks/Juce Demo.cbp
@@ -79,6 +79,8 @@
     </Build>
     <Compiler>
       <Add option="-Wall"/>
+      <Add option="-Wno-strict-aliasing"/>
+      <Add option="-Wno-strict-overflow"/>
     </Compiler>
     <Linker>
       <Add library="gdi32"/>
