--- a/libs/juce-2.0/source/extras/JuceDemo/Builds/VisualStudio2012/resources.rc
+++ b/libs/juce-2.0/source/extras/JuceDemo/Builds/VisualStudio2012/resources.rc
@@ -7,17 +7,17 @@
 #include <windows.h>
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION  3,1,0,0
+FILEVERSION  2,0,0,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
     BLOCK "040904E4"
     BEGIN
       VALUE "CompanyName",  "Raw Material Software Ltd.\0"
-      VALUE "FileDescription",  "The Introjucer\0"
-      VALUE "FileVersion",  "3.1.0\0"
-      VALUE "ProductName",  "The Introjucer\0"
-      VALUE "ProductVersion",  "3.1.0\0"
+      VALUE "FileDescription",  "Juce Demo\0"
+      VALUE "FileVersion",  "2.0.0\0"
+      VALUE "ProductName",  "Juce Demo\0"
+      VALUE "ProductVersion",  "2.0.0\0"
     END
   END
 
