--- a/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
@@ -75,6 +75,8 @@
     </Build>
     <Compiler>
       <Add option="-Wall"/>
+      <Add option="-Wno-strict-aliasing"/>
+      <Add option="-Wno-strict-overflow"/>
     </Compiler>
     <Linker>
       <Add library="gdi32"/>
