Update to latest juce

--- a/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
@@ -1056,6 +1056,14 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
+    <Unit filename="../../../../modules/juce_core/network/juce_IPAddress.cpp">
+      <Option compile="0"/>
+      <Option link="0"/>
+    </Unit>
+    <Unit filename="../../../../modules/juce_core/network/juce_IPAddress.h">
+      <Option compile="0"/>
+      <Option link="0"/>
+    </Unit>
     <Unit filename="../../../../modules/juce_core/network/juce_MACAddress.cpp">
       <Option compile="0"/>
       <Option link="0"/>
