--- a/libs/juce-2.0/source/extras/JuceDemo/Builds/CodeBlocks/Juce Demo.cbp
+++ b/libs/juce-2.0/source/extras/JuceDemo/Builds/CodeBlocks/Juce Demo.cbp
@@ -1237,6 +1237,14 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
+    <Unit filename="../../../../modules/juce_core/network/juce_IPAddress.cpp">
+      <Option compile="0"/>
+      <Option link="0"/>
+    </Unit>
+    <Unit filename="../../../../modules/juce_core/network/juce_IPAddress.h">
+      <Option compile="0"/>
+      <Option link="0"/>
+    </Unit>
     <Unit filename="../../../../modules/juce_core/network/juce_MACAddress.cpp">
       <Option compile="0"/>
       <Option link="0"/>
