Update to latest Juce

--- a/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/CodeBlocks/The Introjucer.cbp
@@ -271,6 +271,10 @@
       <Option compile="0"/>
       <Option link="0"/>
     </Unit>
+    <Unit filename="../../Source/Utility/jucer_TranslationTool.h">
+      <Option compile="0"/>
+      <Option link="0"/>
+    </Unit>
     <Unit filename="../../Source/Utility/jucer_ValueSourceHelpers.h">
       <Option compile="0"/>
       <Option link="0"/>
