--- a/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2005/The Introjucer.vcproj
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2005/The Introjucer.vcproj
@@ -198,6 +198,7 @@
         <File RelativePath="..\..\Source\Utility\jucer_RelativePath.h"/>
         <File RelativePath="..\..\Source\Utility\jucer_StoredSettings.cpp"/>
         <File RelativePath="..\..\Source\Utility\jucer_StoredSettings.h"/>
+        <File RelativePath="..\..\Source\Utility\jucer_TranslationTool.h"/>
         <File RelativePath="..\..\Source\Utility\jucer_ValueSourceHelpers.h"/>
       </Filter>
       <Filter Name="Code Editor">
