--- a/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2010/The Introjucer.vcxproj
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2010/The Introjucer.vcxproj
@@ -1050,6 +1050,7 @@
     <ClInclude Include="..\..\Source\Utility\jucer_PresetIDs.h"/>
     <ClInclude Include="..\..\Source\Utility\jucer_RelativePath.h"/>
     <ClInclude Include="..\..\Source\Utility\jucer_StoredSettings.h"/>
+    <ClInclude Include="..\..\Source\Utility\jucer_TranslationTool.h"/>
     <ClInclude Include="..\..\Source\Utility\jucer_ValueSourceHelpers.h"/>
     <ClInclude Include="..\..\Source\Code Editor\jucer_SourceCodeEditor.h"/>
     <ClInclude Include="..\..\Source\ComponentEditor\components\jucer_ButtonHandler.h"/>
