--- a/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2010/The Introjucer.vcxproj.filters
+++ b/libs/juce-2.0/source/extras/Introjucer/Builds/VisualStudio2010/The Introjucer.vcxproj.filters
@@ -1416,6 +1416,9 @@
     <ClInclude Include="..\..\Source\Utility\jucer_StoredSettings.h">
       <Filter>The Introjucer\Utility</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Utility\jucer_TranslationTool.h">
+      <Filter>The Introjucer\Utility</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Utility\jucer_ValueSourceHelpers.h">
       <Filter>The Introjucer\Utility</Filter>
     </ClInclude>
