--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,9 @@ object_script.*.Release
 .kdev_include_paths
 .kdev4
 
-bin/*
+bin/standalone
+bin/lv2
+bin/vst
 debian
 intermediate
 lv2_ttl_generator
