--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,11 @@ object_script.*.Release
 .kdev_include_paths
 .kdev4
 
-bin/standalone
+bin/ladspa
+bin/dssi
 bin/lv2
 bin/vst
+bin/standalone
 debian
 intermediate
 lv2_ttl_generator
