Don't build drowaudio plugins for now (module needs update)

--- a/ports/Makefile
+++ b/ports/Makefile
@@ -18,11 +18,11 @@ standalone:
 	$(MAKE) -C arctican-function/Standalone
 	$(MAKE) -C arctican-pilgrim/Standalone
 	$(MAKE) -C cabbage/Standalone
-	$(MAKE) -C drowaudio-distortion/Standalone
-	$(MAKE) -C drowaudio-distortionshaper/Standalone
-	$(MAKE) -C drowaudio-flanger/Standalone
-	$(MAKE) -C drowaudio-reverb/Standalone
-	$(MAKE) -C drowaudio-tremolo/Standalone
+# 	$(MAKE) -C drowaudio-distortion/Standalone
+# 	$(MAKE) -C drowaudio-distortionshaper/Standalone
+# 	$(MAKE) -C drowaudio-flanger/Standalone
+# 	$(MAKE) -C drowaudio-reverb/Standalone
+# 	$(MAKE) -C drowaudio-tremolo/Standalone
 	$(MAKE) -C drumsynth/Standalone
 	$(MAKE) -C eqinox/Standalone
 	$(MAKE) -C juce-demo-plugin/Standalone
@@ -48,11 +48,11 @@ lv2:
 	$(MAKE) -C arctican-pilgrim/LV2
 	$(MAKE) -C cabbage/LV2-fx
 	$(MAKE) -C cabbage/LV2-ins
-	$(MAKE) -C drowaudio-distortion/LV2
-	$(MAKE) -C drowaudio-distortionshaper/LV2
-	$(MAKE) -C drowaudio-flanger/LV2
-	$(MAKE) -C drowaudio-reverb/LV2
-	$(MAKE) -C drowaudio-tremolo/LV2
+# 	$(MAKE) -C drowaudio-distortion/LV2
+# 	$(MAKE) -C drowaudio-distortionshaper/LV2
+# 	$(MAKE) -C drowaudio-flanger/LV2
+# 	$(MAKE) -C drowaudio-reverb/LV2
+# 	$(MAKE) -C drowaudio-tremolo/LV2
 	$(MAKE) -C drumsynth/LV2
 	$(MAKE) -C eqinox/LV2
 	$(MAKE) -C juce-demo-plugin/LV2
@@ -75,11 +75,11 @@ vst:
 	$(MAKE) -C arctican-pilgrim/VST
 	$(MAKE) -C cabbage/VST-fx
 	$(MAKE) -C cabbage/VST-ins
-	$(MAKE) -C drowaudio-distortion/VST
-	$(MAKE) -C drowaudio-distortionshaper/VST
-	$(MAKE) -C drowaudio-flanger/VST
-	$(MAKE) -C drowaudio-reverb/VST
-	$(MAKE) -C drowaudio-tremolo/VST
+# 	$(MAKE) -C drowaudio-distortion/VST
+# 	$(MAKE) -C drowaudio-distortionshaper/VST
+# 	$(MAKE) -C drowaudio-flanger/VST
+# 	$(MAKE) -C drowaudio-reverb/VST
+# 	$(MAKE) -C drowaudio-tremolo/VST
 	$(MAKE) -C drumsynth/VST
 	$(MAKE) -C eqinox/VST
 	$(MAKE) -C juce-demo-plugin/VST
