DPT fixing, add build rules for all our plugins

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -3,31 +3,39 @@
 all: build
 
 
-build: plugins
+build: libs standalone ladspa dssi lv2 vst
 
 plugins: standalone ladspa dssi lv2 vst
 
 
+libs:
+	$(MAKE) -C ../libs/distrho/dgl
+
 standalone:
-# 	mkdir -p ../bin/standalone
+	mkdir -p ../bin/standalone
 # 	$(MAKE) -C 3BandEQ/Standalone
 # 	$(MAKE) -C 3BandSplitter/Standalone
 # 	$(MAKE) -C PingPongPan/Standalone
 
 ladspa:
-# 	mkdir -p ../bin/ladspa
-# 	$(MAKE) -C 3BandEQ/LADSPA
-# 	$(MAKE) -C 3BandSplitter/LADSPA
-# 	$(MAKE) -C PingPongPan/LADSPA
+	mkdir -p ../bin/ladspa
+	$(MAKE) -C 3BandEQ/LADSPA
+	$(MAKE) -C 3BandSplitter/LADSPA
+	$(MAKE) -C PingPongPan/LADSPA
 
 dssi:
-# 	mkdir -p ../bin/dssi
-# 	$(MAKE) -C 3BandEQ/DSSI
-# 	$(MAKE) -C 3BandSplitter/DSSI
-# 	$(MAKE) -C PingPongPan/DSSI
+	mkdir -p ../bin/dssi
+	$(MAKE) -C 3BandEQ/DSSI
+	$(MAKE) -C 3BandEQ/DSSI-UI
+	$(MAKE) -C 3BandSplitter/DSSI
+	$(MAKE) -C 3BandSplitter/DSSI-UI
+	$(MAKE) -C Nekobi/DSSI
+	$(MAKE) -C Nekobi/DSSI-UI
+	$(MAKE) -C PingPongPan/DSSI
+	$(MAKE) -C PingPongPan/DSSI-UI
 
 lv2:
-# 	mkdir -p ../bin/lv2
+	mkdir -p ../bin/lv2
 # 	$(MAKE) -C 3BandEQ/LV2
 # 	$(MAKE) -C 3BandSplitter/LV2
 # 	$(MAKE) -C PingPongPan/LV2
@@ -47,14 +55,19 @@ clean:
 # 	$(MAKE) clean -C PingPongPan/Standalone
 
 	# LADSPA
-# 	$(MAKE) clean -C 3BandEQ/LADSPA
-# 	$(MAKE) clean -C 3BandSplitter/LADSPA
-# 	$(MAKE) clean -C PingPongPan/LADSPA
+	$(MAKE) clean -C 3BandEQ/LADSPA
+	$(MAKE) clean -C 3BandSplitter/LADSPA
+	$(MAKE) clean -C PingPongPan/LADSPA
 
 	# DSSI
-# 	$(MAKE) clean -C 3BandEQ/DSSI
-# 	$(MAKE) clean -C 3BandSplitter/DSSI
-# 	$(MAKE) clean -C PingPongPan/DSSI
+	$(MAKE) clean -C 3BandEQ/DSSI
+	$(MAKE) clean -C 3BandEQ/DSSI-UI
+	$(MAKE) clean -C 3BandSplitter/DSSI
+	$(MAKE) clean -C 3BandSplitter/DSSI-UI
+	$(MAKE) clean -C Nekobi/DSSI
+	$(MAKE) clean -C Nekobi/DSSI-UI
+	$(MAKE) clean -C PingPongPan/DSSI
+	$(MAKE) clean -C PingPongPan/DSSI-UI
 
 	# LV2
 # 	$(MAKE) clean -C 3BandEQ/LV2
@@ -67,32 +80,16 @@ clean:
 # 	$(MAKE) clean -C PingPongPan/VST
 	$(MAKE) clean -C JackAss/VST
 
+# 	rm -rf */Standalone/intermediate
+	rm -rf */LADSPA/intermediate
+	rm -rf */DSSI/intermediate
+	rm -rf */DSSI-UI/intermediate
+# 	rm -rf */LV2/intermediate
+# 	rm -rf */VST/intermediate
 
 distclean: clean
-	# Standalone
-# 	$(MAKE) distclean -C 3BandEQ/Standalone
-# 	$(MAKE) distclean -C 3BandSplitter/Standalone
-# 	$(MAKE) distclean -C PingPongPan/Standalone
-
-	# LADSPA
-# 	$(MAKE) distclean -C 3BandEQ/LADSPA
-# 	$(MAKE) distclean -C 3BandSplitter/LADSPA
-# 	$(MAKE) distclean -C PingPongPan/LADSPA
-
-	# DSSI
-# 	$(MAKE) distclean -C 3BandEQ/DSSI
-# 	$(MAKE) distclean -C 3BandSplitter/DSSI
-# 	$(MAKE) distclean -C PingPongPan/DSSI
-
-	# LV2
-# 	$(MAKE) distclean -C 3BandEQ/LV2
-# 	$(MAKE) distclean -C 3BandSplitter/LV2
-# 	$(MAKE) distclean -C PingPongPan/LV2
-
-	# VST
-# 	$(MAKE) distclean -C 3BandEQ/VST
-# 	$(MAKE) distclean -C 3BandSplitter/VST
-# 	$(MAKE) distclean -C PingPongPan/VST
-
+# 	rm -rf */LV2/*.lv2
 	rm -f */*/Makefile
 	rm -f */*/*.make
+	rm -f */*/*.sln
+	rm -f */*/*.vcproj
