--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,27 +1,27 @@
+# -----------------------------------------
 # Compile all the Plugins
 
-all: build
+all: libs ladspa dssi lv2 vst
 
+plugins: ladspa dssi lv2 vst
 
-build: libs standalone ladspa dssi lv2 vst
-
-plugins: standalone ladspa dssi lv2 vst
-
+# -----------------------------------------
+# libs
 
 libs:
 	$(MAKE) -C ../libs/distrho/dgl
 
-standalone:
-	mkdir -p ../bin/standalone
-# 	$(MAKE) -C 3BandEQ/Standalone
-# 	$(MAKE) -C 3BandSplitter/Standalone
-# 	$(MAKE) -C PingPongPan/Standalone
+# -----------------------------------------
+# ladspa
 
 ladspa:
 	mkdir -p ../bin/ladspa
 	$(MAKE) -C 3BandEQ/LADSPA
 	$(MAKE) -C 3BandSplitter/LADSPA
 	$(MAKE) -C PingPongPan/LADSPA
+
+# -----------------------------------------
+# dssi
 
 dssi: libs
 	mkdir -p ../bin/dssi
@@ -34,26 +34,28 @@ dssi: libs
 	$(MAKE) -C PingPongPan/DSSI
 	$(MAKE) -C PingPongPan/DSSI-UI
 
-lv2:
+# -----------------------------------------
+# lv2
+
+lv2: libs
 	mkdir -p ../bin/lv2
 # 	$(MAKE) -C 3BandEQ/LV2
 # 	$(MAKE) -C 3BandSplitter/LV2
 # 	$(MAKE) -C PingPongPan/LV2
 
-vst:
+# -----------------------------------------
+# vst
+
+vst: libs
 	mkdir -p ../bin/vst
 # 	$(MAKE) -C 3BandEQ/VST
 # 	$(MAKE) -C 3BandSplitter/VST
 # 	$(MAKE) -C PingPongPan/VST
-	$(MAKE) -C JackAss/VST
 
+# -----------------------------------------
+# clean
 
 clean:
-	# Standalone
-# 	$(MAKE) clean -C 3BandEQ/Standalone
-# 	$(MAKE) clean -C 3BandSplitter/Standalone
-# 	$(MAKE) clean -C PingPongPan/Standalone
-
 	# LADSPA
 	$(MAKE) clean -C 3BandEQ/LADSPA
 	$(MAKE) clean -C 3BandSplitter/LADSPA
@@ -78,9 +80,7 @@ clean:
 # 	$(MAKE) clean -C 3BandEQ/VST
 # 	$(MAKE) clean -C 3BandSplitter/VST
 # 	$(MAKE) clean -C PingPongPan/VST
-	$(MAKE) clean -C JackAss/VST
 
-# 	rm -rf */Standalone/intermediate
 	rm -rf */LADSPA/intermediate
 	rm -rf */DSSI/intermediate
 	rm -rf */DSSI-UI/intermediate
@@ -88,8 +88,6 @@ clean:
 # 	rm -rf */VST/intermediate
 
 distclean: clean
-# 	rm -rf */LV2/*.lv2
+	rm -rf */LV2/*.lv2
 	rm -f */*/Makefile
 	rm -f */*/*.make
-	rm -f */*/*.sln
-	rm -f */*/*.vcproj
